# master-appdev-2

./: .gitignore  .pre-commit-config.yaml  .pylintric  README.md  alembic.ini  docker-compose.yaml  dockerfile  entrypoint.sh  lab2.py  orm_db.py  pyproject.toml  readme.docx  requirements.txt
app/: .env  main.py  orm_db.py  rabbit.py  rabbit_test.py  redisCache.py  taskiqSchedule.py
app/controllers/: product_controller.py  user_controller.py
app/models/: address_model.py  order_model.py  product_model.py  report_model.py  user_model.py
app/repositories/: address_repository.py  order_repository.py  product_repository.py  report_repository.py  user_repository.py
app/services/: order_service.py  product_service.py  user_service.py
app/tests/: endpoints.py  fixture.py  mock.py  orders.py  products.py  users.py
migrations/: env.py
migrations/versions/: 01c8800bf10b_fix_id.py  0f3fb76b07c6_fix_1.py  382435dcf4bb_fix_7.py  38822258edfa_fix_8.py  3d3743493f48_fix_3.py  43cc65b97f2c_fix_4.py  5cd97449d407_lab4_com.py  710e51c9727e_fix_5.py  8be76d2c2da4_fix_6.py  91507faab27f_.py  c9e43b37f53a_creating_orders.py  fc331ea431c7_fix_2.py
