[project]
name = "lab2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.0",
    "black>=25.11.0",
    "faststream[rabbit]>=0.6.3",
    "isort>=7.0.0",
    "litestar>=2.18.0",
    "logging>=0.4.9.6",
    "pre-commit>=4.5.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pylint>=4.0.3",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "rabbit",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "syncpg>=1.1.3",
    "uvicorn>=0.38.0",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--verbose --color=yes"
#[tool.black]
#extend-exclude = '''
#/(
#    | legacy_files
#)/
#'''